@@ -60,6 +60,7 @@
 	* Changed constructor of facet renderers to use a facet object instead of a facet name
 	* Changed tx_solr_facet_NumericRangeFacetRenderer to use tx_solr_facet_Facet through tx_solr_facet_AbstractFacetRenderer
 	* Changed tx_solr_facet_Facet::getOptionsCount() to take into account the facet internal type
+	* Added support for facet queries
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
